--- a/css/style.css
+++ b/css/style.css
@@ -1,165 +1,4 @@
-body{
-    margin: 0px;
-    padding: 0px;
-    width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-    padding-bottom: 600px;
-}
-
-ul,
-h1,
-p{
-    margin: 0px;
-}
-
-ul{
-    padding: 0px;
-    list-style: none;
-}
-
-a{
-    text-decoration: none;
-    color: inherit;
-}
-
-img{
-    display: block;
-    max-width: 100%;
-}
-
-.header{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-    padding: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-
-}
-
-.header-bg{
-    background: #000000;
-}
-
-.header-menu{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 40px;
-}
-
-.header-menu a{
-    position: relative;
-    display: inline-block;
-    padding: 16px 0;
-    color: #ffffff;
-    font-size: 1.2rem;
-}
-
-.header-menu a::after{
-    position: absolute;
-    content: '';
-    display: block;
-    height: 2px;
-    width: 0%;
-    background: #ffffff;
-    margin-top: 4px;
-    transition: 0.3s;
-}
-
-.header-menu a:hover::after{
-    width: 100%;
-}
-
-.introduction-bg{
-    background: #000000;
-    color: #ffffff;
-    box-shadow: inset 0px -120px #ffffff;
-}
-
-.introduction{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 0 40px;
-    box-sizing: border-box;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-.introduction-content{
-    align-self: end;
-    padding-bottom: 200px;
-}
-
-.introduction h1{
-    margin-bottom: 32px;
-    font-size: 4rem;
-    line-height: 1,12;
-}
-
-.introduction h1 > span{
-    color: #ffbb00;
-}
-
-.introduction p{
-    margin-bottom: 20px;
-    font-size: 1.5rem;
-    line-height: 1.5;
-    color: #b2b2b2;
-}
-
-.introduction a{
-    display: inline-block;
-    padding: 16px 32px;
-    background: linear-gradient(#ffbf00, #f2a50c);
-    border-radius: 4px;
-    box-shadow: 0px 1px 2px rgb(0, 0, 0, 0.1);
-    text-transform: uppercase;
-    color: #332200;
-    font-size: 1.1rem;
-    line-height: 1.33;
-    font-weight: bold;
-}
-
-.introduction a:hover{
-    background: linear-gradient(#ffb60d, #e59317);
-}
-
-
-.introduction img{
-    height: 100%;
-    object-fit: cover;
-    border-radius: 4px;
-}
-
-
-
-@media(max-width: 800px){
-    .header-menu{
-        gap: 20px;
-    }
-    .header-menu a{
-        background-color: #111111;
-        padding: 12px 16px;
-        border-radius: 4px;
-    }
-    .header-menu a:hover{
-        background: #2E2E2E;
-    }
-    .header-menu a::after{
-        content: none;
-    }
-}
-
-@media(max-width: 600px){
-    .header-menu{
-        gap: 12px;
-    }
-    .header-menu a{
-        padding: 8px 12px;
-        font-size: 1rem;
-    }
-}
+@import './global/global.css';
+@import './global/header.css';
+@import './home/introduction.css';
+@import './utilities/components.css'
