--- a/css/global/header.css
+++ b/css/global/header.css
@@ -12,7 +12,7 @@
 }
 
 .header-bg{
-    background: #000000;
+    background: var(--color-12);
 }
 
 .header-menu{
@@ -25,7 +25,7 @@
     position: relative;
     display: inline-block;
     padding: 16px 0;
-    color: #ffffff;
+    color: var(--color-0);
     font-size: 1.1rem;
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
@@ -37,7 +37,7 @@
     display: block;
     height: 2px;
     width: 0%;
-    background: #ffffff;
+    background: var(--color-0);
     margin-top: 4px;
     transition: 0.3s;
 }
@@ -51,12 +51,12 @@
         gap: 20px;
     }
     .header-menu a{
-        background-color: #111111;
+        background-color: var(--color-11);
         padding: 12px 16px;
         border-radius: 4px;
     }
     .header-menu a:hover{
-        background: #2E2E2E;
+        background: var(--color-10);
     }
     .header-menu a::after{
         content: none;
