--- a/css/global/global.css
+++ b/css/global/global.css
@@ -8,6 +8,9 @@ body{
 
 ul,
 h1,
+h2,
+h3,
+h4,
 p{
     margin: 0px;
 }
@@ -25,4 +28,8 @@ a{
 img{
     display: block;
     max-width: 100%;
+}
+
+img[src$=".jpg"]{
+    border-radius: 4px;
 }
