--- a/css/utilities/components.css
+++ b/css/utilities/components.css
@@ -7,10 +7,7 @@
     text-transform: uppercase;
     color: #332200;
     font-size: 1.1rem;
-    line-height: 1.33;
-    font-weight: bold;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
+    font: 600 1.125rem/1.35 'Poppins', sans-serif;
 }
 
 .botao:hover{
@@ -20,6 +17,6 @@
 @media(max-width: 600px){
     .botao{
         padding: 12px 16px;
-        font-size: 16px;
+        font-size: 1rem;
     }
 }
