--- a/css/home/introduction.css
+++ b/css/home/introduction.css
@@ -8,10 +8,6 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 0 40px;
-    box-sizing: border-box;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
 }
 
 .introduction-content{
@@ -34,6 +30,7 @@
 
 
 .introduction img{
+    width: 100%;
     height: 100%;
     object-fit: cover;
 }
