--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 @import './home/introduction.css';
 @import './home/technology.css';
 @import './home/partnerships.css';
+@import './home/testemonial.css';
 
 /*Bike list*/
 @import './bike/bike-list.css'
