--- a/css/bike/bike-list.css
+++ b/css/bike/bike-list.css
@@ -1,5 +1,6 @@
 .bike{
-    padding: 60px 0px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     
 }
 
@@ -14,10 +15,15 @@
 .bike-list{
     display: flex;
     gap: 40px;
-    padding: 0px 20px;
+    padding: 0px 20px 20px 20px;
     max-width: 1400px;
-    margin: 0px auto;
+    margin-left: auto;
+    margin-right: auto;
     overflow-x: auto;
+}
+
+#bike .bike-list{
+    padding: 0px 0px 20px 0px;
 }
 
 .bike-list li{
