--- a/css/utilities/components.css
+++ b/css/utilities/components.css
@@ -18,6 +18,8 @@
     font-size: 1.1rem;
     font: 600 1.125rem/1.35 'Poppins', sans-serif;
     max-width: max-content;
+    border: none;
+    cursor: pointer;
 }
 .button:hover{
     background: linear-gradient(#ffb60d, #e59317);
