--- a/css/contact/contact.css
+++ b/css/contact/contact.css
@@ -76,6 +76,57 @@
     background: var(--color-0);
 }
 
+.stores{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.stores h2{
+    grid-column: 1/-1;
+    margin-bottom: 60px;
+}
+.stores h2 > span{
+    color: var(--color-p1);
+}
+
+.stores img{
+    border-radius: 4px 4px 0 0;
+}
+
+.stores-items{
+    border-radius: 4px;
+    background: var(--color-0);
+    box-shadow:  0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.stores-content{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 32px 16px;
+    padding: 32px;
+}
+.stores-content h3,
+.stores-temp{
+    grid-column: 1/-1;
+}
+
+.stores-data{
+    color: var(--color-8);
+    display: grid;
+    gap: 8px;
+    border-left: 2px solid var(--color-2);
+    padding-left: 12px;
+}
+
+.stores-temp{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+
 @media(max-width: 800px){
     .contact{
         grid-template-columns: 1fr;
@@ -99,5 +150,23 @@
     
     .contact-networks{
         margin-bottom: 12px;
+    }
+
+    .stores{
+        gap: 20px;
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .stores h2{
+        margin-bottom: 32px;
+    }
+
+    .stores-content{
+        grid-template-columns: 1fr;
+    }
+}
+@media(max-width: 600px){
+    .stores{
+        grid-template-columns: 1fr;
     }
 }
