--- a/css/bike/bikes.css
+++ b/css/bike/bikes.css
@@ -4,6 +4,7 @@
     gap: 40px;
     padding-top: 60px;
     padding-bottom: 60px;
+    background: url("../../img/dec/top-right.svg") no-repeat top right;
 }
 
 .bikes-image{
