--- a/css/contact/contact.css
+++ b/css/contact/contact.css
@@ -20,7 +20,7 @@
 
 .contact-data{
     border-radius: 5px 0 0 5px;
-    background: var(--color-12);
+    background: var(--color-12) url('../../img/dec/bottom-left.svg') no-repeat bottom 20px left 20px;
 }
 
 .contact-data h2{
@@ -73,7 +73,7 @@
 
 .contact-form{
     border-radius: 0 5px 5px 0;
-    background: var(--color-0);
+    background: var(--color-0) url('../../img/dec/bottom-right.svg') no-repeat bottom 20px right 20px;
 }
 
 .stores{
@@ -143,6 +143,7 @@
     }
     .contact-data{
         border-radius: 5px 5px 0 0;
+        background: var(--color-12);
     }
     .contact-form{
         border-radius: 0 0 5px 5px;
