--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,7 +1,5 @@
 body{
     margin: 0px;
-    padding: 0px;
-    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -27,6 +25,7 @@ a{
 
 img{
     display: block;
+    height: auto;
     max-width: 100%;
 }
 
