--- a/css/home/technology.css
+++ b/css/home/technology.css
@@ -60,7 +60,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: left;
+    object-position: right;
 }
 
 @media(max-width: 800px){
